--- a/app/src/main/res/layout/user_element.xml
+++ b/app/src/main/res/layout/user_element.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/user_btn"
+    <ImageView
+        android:id="@+id/user_photo"
         android:layout_width="70dp"
         android:layout_height="60dp"
         android:layout_marginStart="5dp"
