--- a/app/src/main/res/layout/user_element.xml
+++ b/app/src/main/res/layout/user_element.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/user_photo"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"/>
+        <ImageView
+            android:id="@+id/user_photo"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"/>
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
